--- a/exams/calculator/templates/table.html
+++ b/exams/calculator/templates/table.html
@@ -1,5 +1,4 @@
-<h1>Table of {{ num }}</h1>
-{% for i in result  %}
-    <h3>{{i[0]}}</h3>
-    <h3>1</h3>
-{% endfor %}
+
+<h1>{{ num }}</h1>
+<h1>{{ num }}</h1>
+<h1>{{ num }}</h1> 
