--- a/exams/calculator/templates/input.html
+++ b/exams/calculator/templates/input.html
@@ -3,3 +3,7 @@
 <input type="TextInput" name="input" value="number">
 <input type="submit" value="submit">
 </form>
+
+<form action="{% url 'cal:stat' %}" method="get">
+<input type="submit" value="Stat">
+</form>
